Completed Unit Test of Hasher Core.

--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -2,5 +2,5 @@ run: obj_dir/Vcore
 	obj_dir/Vcore
 
 obj_dir/Vcore: core.v core_test.cpp
-	verilator -Wall --cc core.v --exe core_test.cpp -GCORE_ID=42 -I../alu  -I../alu/comparator -I../core_id_module
+	verilator -Wall --cc core.v --exe core_test.cpp -GCORE_ID=42 -I../alu  -I../alu/comparator -I../core_id_module -GCORE_ID=42
 	make -C obj_dir -j -f Vcore.mk Vcore
