--- a/src/core_sim/Makefile
+++ b/src/core_sim/Makefile
@@ -1,4 +1,5 @@
-run: obj_dir/Vcore_sim test/build/add_test.ml test/build/bits_off_compare_test.ml test/build/rotate_left_test.ml test/build/unselected_core_test.ml
+run: obj_dir/Vcore_sim test/build/add_test.ml test/build/bits_off_compare_test.ml test/build/core_id_test.ml test/build/rotate_left_test.ml test/build/unselected_core_test.ml
+# run: obj_dir/Vcore_sim test/build/core_id_test.ml
 	obj_dir/Vcore_sim test/build/*.ml
 
 obj_dir/Vcore_sim: core_sim.v core_sim.cpp
@@ -10,6 +11,9 @@ test/build/add_test.ml: test/add_test.asm
 
 test/build/bits_off_compare_test.ml: test/bits_off_compare_test.asm
 	xsf_asm -o test/build/bits_off_compare_test.ml test/bits_off_compare_test.asm
+
+test/build/core_id_test.ml: test/core_id_test.asm
+	xsf_asm -o test/build/core_id_test.ml test/core_id_test.asm
 
 test/build/rotate_left_test.ml: test/build/rotate_left_test.asm
 	xsf_asm -o test/build/rotate_left_test.ml test/build/rotate_left_test.asm
