--- a/src/core_sim/Makefile
+++ b/src/core_sim/Makefile
@@ -1,5 +1,5 @@
-run: obj_dir/Vcore_sim test/build/add_test.ml test/build/bits_off_compare_test.ml test/build/core_id_test.ml test/build/rotate_left_test.ml test/build/unselected_core_test.ml test/build/xor_test.ml
-# run: obj_dir/Vcore_sim test/build/xor_test.ml
+run: obj_dir/Vcore_sim test/build/add_test.ml test/build/bit_counter_test.ml test/build/bits_off_compare_test.ml test/build/core_id_test.ml test/build/rotate_left_test.ml test/build/unselected_core_test.ml test/build/xor_test.ml
+# run: obj_dir/Vcore_sim test/build/bit_counter_test.ml
 	obj_dir/Vcore_sim test/build/*.ml
 
 obj_dir/Vcore_sim: core_sim.v core_sim.cpp
@@ -9,17 +9,23 @@ obj_dir/Vcore_sim: core_sim.v core_sim.cpp
 test/build/add_test.ml: test/add_test.asm
 	xsf_asm -o test/build/add_test.ml test/add_test.asm
 
+test/build/bit_counter_test.asm: test/bit_counter_test.py
+	python3 test/bit_counter_test.py
+
+test/build/bit_counter_test.ml: test/build/bit_counter_test.asm
+	xsf_asm -o test/build/bit_counter_test.ml test/build/bit_counter_test.asm
+
 test/build/bits_off_compare_test.ml: test/bits_off_compare_test.asm
 	xsf_asm -o test/build/bits_off_compare_test.ml test/bits_off_compare_test.asm
 
 test/build/core_id_test.ml: test/core_id_test.asm
 	xsf_asm -o test/build/core_id_test.ml test/core_id_test.asm
 
-test/build/rotate_left_test.ml: test/build/rotate_left_test.asm
-	xsf_asm -o test/build/rotate_left_test.ml test/build/rotate_left_test.asm
-
 test/build/rotate_left_test.asm: test/rotate_left_test.py
 	python3 test/rotate_left_test.py
+
+test/build/rotate_left_test.ml: test/build/rotate_left_test.asm
+	xsf_asm -o test/build/rotate_left_test.ml test/build/rotate_left_test.asm
 
 test/build/unselected_core_test.ml: test/unselected_core_test.asm
 	xsf_asm -o test/build/unselected_core_test.ml test/unselected_core_test.asm
