Created two different make clean commands to speed up dev.

--- a/src/core_sim/Makefile
+++ b/src/core_sim/Makefile
@@ -1,5 +1,5 @@
 run: obj_dir/Vcore_sim test/build/add_test.ml test/build/bit_counter_test.ml test/build/bits_off_compare_test.ml test/build/core_id_test.ml test/build/nonce_test.ml test/build/permute_test.ml test/build/rotate_left_test.ml test/build/subkey_test.ml test/build/unselected_core_test.ml test/build/xor_test.ml
-# run: obj_dir/Vcore_sim test/build/permute_test.ml
+# run: obj_dir/Vcore_sim test/build/encrypt_test.ml
 	obj_dir/Vcore_sim test/build/*.ml
 
 obj_dir/Vcore_sim: core_sim.v core_sim.cpp
@@ -20,6 +20,12 @@ test/build/bits_off_compare_test.ml: test/bits_off_compare_test.asm
 
 test/build/core_id_test.ml: test/core_id_test.asm
 	xsf_asm -o test/build/core_id_test.ml test/core_id_test.asm
+
+test/build/encrypt_test.asm: test/encrypt_test.py
+	python3 test/encrypt_test.py
+
+test/build/encrypt_test.ml: test/build/encrypt_test.asm
+	xsf_asm -o test/build/encrypt_test.ml test/build/encrypt_test.asm
 
 test/build/mix_test.asm: test/mix_test.py
 	python3 test/mix_test.py
@@ -55,6 +61,12 @@ test/build/xor_test.ml: test/xor_test.asm
 	xsf_asm -o test/build/xor_test.ml test/xor_test.asm
 
 .PHONY: clean
-clean:
+clean:	clean-test clean-verilator
+
+.PHONY: clean-test
+clean-test:
 	rm -f test/build/*
+
+.PHONY: clean-verilator
+clean-verilator:
 	rm -f obj_dir/*
