Added Threefish encrypt test. Fixed permute implementation. Linted Skein module.

--- a/src/core_sim/Makefile
+++ b/src/core_sim/Makefile
@@ -1,4 +1,4 @@
-run: obj_dir/Vcore_sim test/build/add_test.ml test/build/bit_counter_test.ml test/build/bits_off_compare_test.ml test/build/core_id_test.ml test/build/nonce_test.ml test/build/permute_test.ml test/build/rotate_left_test.ml test/build/subkey_test.ml test/build/unselected_core_test.ml test/build/xor_test.ml
+run: obj_dir/Vcore_sim test/build/add_test.ml test/build/bit_counter_test.ml test/build/bits_off_compare_test.ml test/build/core_id_test.ml test/build/encrypt_test.ml test/build/nonce_test.ml test/build/permute_test.ml test/build/rotate_left_test.ml test/build/subkey_test.ml test/build/unselected_core_test.ml test/build/xor_test.ml
 # run: obj_dir/Vcore_sim test/build/encrypt_test.ml
 	obj_dir/Vcore_sim test/build/*.ml
 
