--- a/src/nonce_module/Makefile
+++ b/src/nonce_module/Makefile
@@ -4,3 +4,7 @@ run: obj_dir/Vnonce_module
 obj_dir/Vnonce_module: nonce_module.v nonce_module_test.cpp
 	verilator -Wall --cc nonce_module.v --exe nonce_module_test.cpp -I../base64encoder/x6 -I../base64encoder/single
 	make -C obj_dir -j -f Vnonce_module.mk Vnonce_module
+
+.PHONY: clean
+clean:
+	rm -rf obj_dir
