Moved block ram tests to their own directories so that they have the same pattern as other modules that use the global Makefile.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-MODULES=alu base64encoder/base64encoder base64encoder/base64encoder_x6 constants_rom core core_id_module core_sim nonce_module serial_module/serial_receiver serial_module/serial_transmitter xkcd_skein_processor
+MODULES=alu base64encoder/base64encoder base64encoder/base64encoder_x6 block_ram/block_ram block_ram/block_ram_tdp constants_rom core core_id_module core_sim nonce_module serial_module/serial_receiver serial_module/serial_transmitter xkcd_skein_processor
 EXECUTABLES=$(join $(MODULES),$(addprefix /obj_dir/V,$(notdir $(MODULES))))
 
 test: $(EXECUTABLES)
