--- a/src/nonce_module/Makefile
+++ b/src/nonce_module/Makefile
@@ -2,7 +2,7 @@ run: obj_dir/Vnonce_module
 	obj_dir/Vnonce_module
 
 obj_dir/Vnonce_module: nonce_module.v nonce_module_test.cpp
-	verilator -Wall --cc nonce_module.v --exe nonce_module_test.cpp -I../base64encoder/x6 -I../base64encoder/single
+	verilator -Wall --cc nonce_module.v --exe nonce_module_test.cpp -I../base64encoder/base64encoder_x6 -I../base64encoder/base64encoder
 	make -C obj_dir -j -f Vnonce_module.mk Vnonce_module
 
 .PHONY: clean
