Added totaling script to test report.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,17 @@
 MODULES=alu base64encoder/base64encoder base64encoder/base64encoder_x6 block_ram/block_ram block_ram/block_ram_tdp constants_rom core core_id_module core_sim nonce_module serial_module/serial_receiver serial_module/serial_transmitter xkcd_skein_processor
 EXECUTABLES=$(join $(MODULES),$(addprefix /obj_dir/V,$(notdir $(MODULES))))
 REPORTS=$(join $(MODULES),$(addprefix /obj_dir/V,$(notdir $(addsuffix .txt,$(MODULES)))))
+BUILD_DIR=build
+REPORT=report.txt
 
 
 test: $(EXECUTABLES)
 	$(foreach f,$(subst obj_dir/,,$(dir $^)),make -C $f run;)
+	mkdir -pv $(BUILD_DIR)
+	cat $(REPORTS) > $(BUILD_DIR)/$(REPORT)
+	./report.py $(BUILD_DIR)/$(REPORT)
 	@echo -------------------- TEST RESULTS --------------------
-	@cat $(REPORTS)
+	@cat $(BUILD_DIR)/$(REPORT)
 
 $(EXECUTABLES):
 	make -C $(subst obj_dir/,,$(dir $@)) $(addprefix obj_dir/,$(notdir $@))
@@ -14,3 +19,4 @@ $(EXECUTABLES):
 .PHONY: clean
 clean:
 	$(foreach f,$(MODULES),make -C $f clean;)
+	rm -rf $(BUILD_DIR)
