More Makefile improvements.

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,6 +5,7 @@ MODULES= \
 	base64encoder/base64encoder_x6 \
 	block_ram/block_ram \
 	block_ram/block_ram_tdp \
+	block_ram/block_ram_test \
 	constants_rom \
 	core \
 	core_id_module \
@@ -12,7 +13,7 @@ MODULES= \
 	nonce_module \
 	serial_module/serial_receiver \
 	serial_module/serial_transmitter \
-	xkcd_skein_processor
+	# xkcd_skein_processor
 
 EXECUTABLES=$(join $(MODULES),$(addprefix /obj_dir/V,$(notdir $(MODULES))))
 REPORTS=$(join $(MODULES),$(addprefix /obj_dir/V,$(notdir $(addsuffix .txt,$(MODULES)))))
