--- a/src/best_nonce_module/Makefile
+++ b/src/best_nonce_module/Makefile
@@ -1,10 +1,5 @@
-run: obj_dir/Vbest_nonce_module
-	obj_dir/Vbest_nonce_module
+MODULE=best_nonce_moule
+SRC_DIR=..
+DEPENDENCIES= \
 
-obj_dir/Vbest_nonce_module: best_nonce_module.v best_nonce_module_test.cpp
-	verilator -Wall --cc best_nonce_module.v --exe best_nonce_module_test.cpp
-	make -C obj_dir -j -f Vbest_nonce_module.mk Vbest_nonce_module
-
-.PHONY: clean
-clean:
-	rm -rf obj_dir
+include $(SRC_DIR)/module.mk
