--- a/src/nonce_module/Makefile
+++ b/src/nonce_module/Makefile
@@ -1,9 +1,22 @@
-run: obj_dir/Vnonce_module
-	obj_dir/Vnonce_module
+# --- MODULE SPECIFIC VARIABLES ---
+MODULE=nonce_module
+SRC_DIR=..
+DEPENDENCIES= \
+	base64encoder/base64encoder \
+	base64encoder/base64encoder_x6
 
-obj_dir/Vnonce_module: nonce_module.v nonce_module_test.cpp
-	verilator -Wall --cc nonce_module.v --exe nonce_module_test.cpp -I../base64encoder/base64encoder_x6 -I../base64encoder/base64encoder
-	make -C obj_dir -j -f Vnonce_module.mk Vnonce_module
+# --- END MODULE SPECIFIC ---
+
+LIB_DIR=$(SRC_DIR)/test
+
+run: obj_dir/V$(MODULE)
+	obj_dir/V$(MODULE)
+
+obj_dir/V$(MODULE): $(MODULE).v $(MODULE)_test.cpp $(LIB_DIR)/test.cpp $(addsuffix /*.v,$(addprefix ../,$(DEPENDENCIES)))
+	mkdir -p obj_dir
+	g++ -c $(LIB_DIR)/test.cpp -I$(LIB_DIR) -o obj_dir/test.o
+	verilator -Wall --cc $(MODULE).v --exe test.o $(MODULE)_test.cpp $(addprefix -I../,$(DEPENDENCIES)) -CFLAGS -I../$(LIB_DIR)
+	make -C obj_dir -j -f V$(MODULE).mk V$(MODULE)
 
 .PHONY: clean
 clean:
