--- a/src/serial_module/serial_receiver/Makefile
+++ b/src/serial_module/serial_receiver/Makefile
@@ -1,10 +1,5 @@
-run: obj_dir/Vserial_receiver
-	obj_dir/Vserial_receiver
+MODULE=serial_receiver
+SRC_DIR=../..
+DEPENDENCIES= \
 
-obj_dir/Vserial_receiver: serial_receiver.v serial_receiver_test.cpp
-	verilator -Wall --cc serial_receiver.v --exe serial_receiver_test.cpp
-	make -C obj_dir -j -f Vserial_receiver.mk Vserial_receiver
-
-.PHONY: clean
-clean:
-	rm -rf obj_dir
+include $(SRC_DIR)/module.mk
