--- a/src/serial_module/serial_transmitter/Makefile
+++ b/src/serial_module/serial_transmitter/Makefile
@@ -1,10 +1,5 @@
-run: obj_dir/Vserial_transmitter
-	obj_dir/Vserial_transmitter
+MODULE=serial_transmitter
+SRC_DIR=../..
+DEPENDENCIES= \
 
-obj_dir/Vserial_transmitter: serial_transmitter.v serial_transmitter_test.cpp
-	verilator -Wall --cc serial_transmitter.v --exe serial_transmitter_test.cpp
-	make -C obj_dir -j -f Vserial_transmitter.mk Vserial_transmitter
-
-.PHONY: clean
-clean:
-	rm -rf obj_dir
+include $(SRC_DIR)/module.mk
