--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 before_install:
   - sudo apt-get update
-  - sudo apt-get install verilator
+  - sudo apt-get install verilator python3.6
 
 language: cpp
 
@@ -9,7 +9,7 @@ compiler:
   - gcc
 
 install:
-  - cd tools/xsf_asm && python setup.py install
+  - cd tools/xsf_asm && sudo python3.6 setup.py install
 
 script:
   - cd src && make
