--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 before_install:
   - sudo apt-get update
-  - sudo apt-get install verilator python3
+  - sudo apt-get install verilator python3 python3-setuptools
 
 language: cpp
 
