--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 sudo: required
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq verilator python3 python3-setuptools
+  - sudo apt-get install -qq python3 python3-setuptools
+  - sudo apt-get install verilator
 
 language: cpp
 
