Fix for bad param?"

--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -5,6 +5,6 @@ DEPENDENCIES= \
 	alu/comparator \
 	core_id_module \
 
-VERILATOR_FLAGS= -GCORE_ID=42
+VERILATOR_FLAGS=-GCORE_ID=42
 
 include $(SRC_DIR)/module.mk
