--- a/src/core_id_module/Makefile
+++ b/src/core_id_module/Makefile
@@ -2,6 +2,6 @@ MODULE=core_id_module
 SRC_DIR=..
 DEPENDENCIES= \
 
-VERILATOR_FLAGS= -GCORE_ID=42
+VERILATOR_FLAGS=-GCORE_ID=42
 
 include $(SRC_DIR)/module.mk
