--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,13 @@ sudo: required
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq python3 python3-setuptools
-  - sudo apt-get install verilator
+  - git clone http://git.veripool.org/git/verilator
+  - cd $TRAVIS_BUILD_DIR/verilator
+  - git checkout stable
+  - autoconf
+  - ./configure
+  - make
+  - sudo make install
 
 language: cpp
 
