--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
   - sudo apt-get install -qq python3 python3-setuptools
   - git clone http://git.veripool.org/git/verilator
   - cd $TRAVIS_BUILD_DIR/verilator
-  - git checkout stable
+  - git checkout v3.900
   - autoconf
   - ./configure
   - make
