Fix core sim compilation.

--- a/src/core_sim/Makefile
+++ b/src/core_sim/Makefile
@@ -42,8 +42,8 @@ run: obj_dir/V$(MODULE) $(addprefix $(TEST_BUILD_DIR)/,$(PY_FILES:.py=.ml)) $(ad
 
 obj_dir/V$(MODULE): $(MODULE).v $(MODULE).cpp $(LIB_DIR)/test.cpp
 	mkdir -p obj_dir
-	g++ -c $(LIB_DIR)/test.cpp -I$(LIB_DIR) -o obj_dir/test.o
-	verilator -Wall --cc $(MODULE).v --exe test.o $(MODULE).cpp $(addprefix -I$(SRC_DIR)/,$(DEPENDENCIES)) $(VERILATOR_FLAGS) -CFLAGS -I../$(LIB_DIR)
+	clang++ -std=c++11 -c $(LIB_DIR)/test.cpp -I$(LIB_DIR) -o obj_dir/test.o
+	verilator -Wall --cc $(MODULE).v --exe test.o $(MODULE).cpp $(addprefix -I$(SRC_DIR)/,$(DEPENDENCIES)) $(VERILATOR_FLAGS) -CFLAGS -I../$(LIB_DIR) -CFLAGS -std=c++11
 	make -C obj_dir -j -f V$(MODULE).mk V$(MODULE)
 
 $(addprefix $(TEST_BUILD_DIR)/,$(PY_FILES:.py=.ml)):
