--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
-dist: xenial
 sudo: required
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq python3 python3-setuptools
-  - wget https://github.com/sifive/verilator/releases/download/3.922-0sifive1/verilator_3.922-0sifive1_amd64.deb
-  - sudo dpkg -i verilator_3.922-0sifive1_amd64.deb
-  - sudo apt-get install -f
+  - git clone http://git.veripool.org/git/verilator
+  - cd $TRAVIS_BUILD_DIR/verilator
+  - git checkout v3.922
+  - autoconf
+  - ./configure
+  - make
+  - sudo make install
 
 language: cpp
 
