--- a/src/core_sim/Makefile
+++ b/src/core_sim/Makefile
@@ -42,7 +42,7 @@ run: obj_dir/V$(MODULE) $(addprefix $(TEST_BUILD_DIR)/,$(PY_FILES:.py=.ml)) $(ad
 
 obj_dir/V$(MODULE): $(MODULE).v $(MODULE).cpp $(LIB_DIR)/test.cpp
 	mkdir -p obj_dir
-	clang++ -std=c++11 -c $(LIB_DIR)/test.cpp -I$(LIB_DIR) -o obj_dir/test.o
+	$(CXX) -std=c++11 -fPIC -c $(LIB_DIR)/test.cpp -I$(LIB_DIR) -o obj_dir/test.o
 	verilator -Wall --cc $(MODULE).v --exe test.o $(MODULE).cpp $(addprefix -I$(SRC_DIR)/,$(DEPENDENCIES)) $(VERILATOR_FLAGS) -CFLAGS -I../$(LIB_DIR) -CFLAGS -std=c++11
 	make -C obj_dir -j -f V$(MODULE).mk V$(MODULE)
 
