--- a/src/Makefile
+++ b/src/Makefile
@@ -13,6 +13,7 @@ MODULES= \
 	nonce_module \
 	serial_module/serial_receiver \
 	serial_module/serial_transmitter \
+	state_machine/instuction_state_machine/read_state_machine \
 	# xkcd_skein_processor
 
 EXECUTABLES=$(join $(MODULES),$(addprefix /obj_dir/V,$(notdir $(MODULES))))
